@@ -975,7 +975,8 @@ class="br0">}</span>                         <span class="co1">// 13</span>
           type property instead of <i>String</i>. It has a more sophisticated
           editor and maps to a TIME type data in the database)</li>
         <li><i><a href="https://openxava.org/OpenXavaDoc/apidocs/org/openxava/annotations/DateTime.html">@DateTime</a>
-            (new in v6.6), </i>DATETIME, FECHAHORA</li>
+            (new in v6.6), </i>DATETIME, FECHAHORA (since v7.4 you can use <i>LocalDateTime</i>
+          type property instead of <i>Date</i> with <i>@DateTime/Stereotype("DATETIME")</i>)</li>
         <li>IMAGES_GALLERY, GALERIA_IMAGENES (<a class="wiki_link" href="#Model-Properties-IMAGES_GALLERY%20stereotype">setup
             instructions</a>) (since v6.6 you can use <i>@Files</i> as
           alternative)</li>
