@@ -989,7 +989,9 @@ class="br0">}</span>                    <span class="co1">// 13</span></pre>
           cuenta con un editor más sofisticado y mapea a un dato tipo HORA en la
           base de datos)</li>
         <li><i><a href="https://openxava.org/OpenXavaDoc/apidocs/org/openxava/annotations/DateTime.html">@DateTime</a>
-            (</i><i><i><i>nuevo en </i></i>v6.6), </i>FECHAHORA, DATETIME</li>
+            (</i><i><i><i>nuevo en </i></i>v6.6), </i>FECHAHORA, DATETIME (a
+          partir de v7.4 puedes usar propiedades con tipo <i>LocalDateTime</i>
+          en lugar de <i>Date </i>con <i>@DateTime/@Stereotype("FECHAHORA")</i>)</li>
         <li>GALERIA_IMAGENES, IMAGES_GALLERY (<a class="wiki_link" href="#Modelo-Propiedades-Estereotipo%20GALERIA_IMAGENES">instrucciones</a>)
           (a partir de v6.6 puedes usar <i>@File</i>s como alternativa)</li>
         <li><i><a href="https://openxava.org/OpenXavaDoc/apidocs/org/openxava/annotations/ZerosFilled.html">@ZerosFilled</a>
